# ChangeLog for x11-drivers/ati-drivers
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.232 2010/11/23 21:06:20 lu_zero Exp $

*ati-drivers-10.11 (23 Nov 2010)

  23 Nov 2010; Luca Barbato <lu_zero@gentoo.org> ati-drivers-10.10.ebuild,
  +ati-drivers-10.11.ebuild:
  Version bump and dep fix, thanks to Enrico as usual.

*ati-drivers-10.10 (07 Nov 2010)

  07 Nov 2010; Luca Barbato <lu_zero@gentoo.org> +ati-drivers-10.10.ebuild:
  New version, thanks to Enrico for the ebuild.

  23 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -ati-drivers-10.7.ebuild, -ati-drivers-10.9.ebuild,
  ati-drivers-10.9-r1.ebuild:
  Stable 10.9-r1 and remove some older.

  17 Oct 2010; Luca Barbato <lu_zero@gentoo.org> metadata.xml:
  Add Enrico Tagliavini as maintainer

*ati-drivers-8.780 (01 Oct 2010)

  01 Oct 2010; Luca Barbato <lu_zero@gentoo.org> +ati-drivers-8.780.ebuild:
  New beta version, thanks to Enrico Tagliavini
  <enrico.tagliavini@gmail.com> as usual

*ati-drivers-10.9-r1 (26 Sep 2010)

  26 Sep 2010; Luca Barbato <lu_zero@gentoo.org>
  +files/ati-drivers-2.6.36.patch,
  +files/ati-drivers-CVE-2010-3081-fix.patch, +ati-drivers-10.9-r1.ebuild:
  Address CVE-2010-3081 related changes, thanks Enrico Tagliavini
  <enrico.tagliavini@gmail.com> for the update and the testing

*ati-drivers-10.9 (21 Sep 2010)

  21 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +ati-drivers-10.9.ebuild:
  Proxy bump for Enrico Tagliavini <enrico.tagliavini@gmail.com>

  10 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -ati-drivers-10.4.ebuild, -ati-drivers-10.5.ebuild,
  ati-drivers-10.8.ebuild:
  Stable latest. Remove older versions.

*ati-drivers-10.8 (30 Aug 2010)

  30 Aug 2010; Luca Barbato <lu_zero@gentoo.org> +ati-drivers-10.8.ebuild:
  Version bump, thanks again Enrico

  10 Aug 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/ati-drivers-xen.patch:
  Drop unused patch.
