@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/radeon-ucode
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.6 2010/11/23 01:29:03 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/radeon-ucode/ChangeLog,v 1.7 2010/12/23 11:45:51 ssuominen Exp $
+
+  23 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
+  radeon-ucode-20101122.ebuild:
+  amd64 stable wrt #344827
 
 *radeon-ucode-20101122 (23 Nov 2010)
 
